# uncertainty

./: .gitignore  README.md  exp1.ipynb  noteboook.ipynb  noteboook_ram.ipynb  pyproject.toml
models/resnet18_normMNIST_no-shuffle_seed0/: config.json  metrics.csv
models/resnet18_normMNIST_no-shuffle_seed0_1/: metrics.csv
models/resnet18_normMNIST_no-shuffle_seed0_2/: config.json  metrics.csv
models/resnet18_normMNIST_no-shuffle_seed0_3/: metrics.csv
models/resnet18_normMNIST_no-shuffle_seed0_4/: metrics.csv
models/resnet18_normMNIST_no-shuffle_seed0_5/: metrics.csv
models/resnet18_normMNIST_no-shuffle_seed0_6/: metrics.csv
models/resnet18_normMNIST_no-shuffle_seed0_7/: metrics.csv
models/resnet18_pre-trained_normMNIST_no-shuffle_seed0/: config.json  metrics.csv
src/: analysis.py  exp1.ipynb  main.py  project.ipynb  project_exp5_to_merge.ipynb  project_ram_exp2.ipynb  project_ram_exp2_exp3.ipynb  tools.py  utils.py
